--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage":"https://bds0900.github.io/shoppie-front/"
 }
